CURIO-0004: Curio Facelet 0.1 - add simple business to handle "Search" functionality. - fix minor bug introduced in CURIO-0003 (re-opened 1).

--- a/src/main/webapp/curio.xhtml
+++ b/src/main/webapp/curio.xhtml
@@ -20,8 +20,8 @@
 				</div>
 
 				<div class="curio-input">
-					<b:inputText placeholder="Game title" value="#{curioSearch.input}">
-						<f:facet name="prepend">f
+					<b:inputText placeholder="Game title" value="${curioSearch.input}">
+						<f:facet name="prepend">
 							<b:commandButton value="Search" look="primary"
 									action="#{curioSearch.updateOutput}" />
 						</f:facet>
